Move observing ui::Compositor from FlingController to FlingScheduler

This should make it easier to have an Android implementation where
ui::Compositor is not available.

Bug: 848881
Change-Id: Ib7838f53b0935bf178954f1aa64bbf777cae3b6d
Reviewed-on: https://chromium-review.googlesource.com/1087807
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Sahel Sharifymoghaddam <sahel@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565053}
Former-commit-id: 991984ee8f4bddf51105084ecba84625c4f5be57